filter bug on safari fixed

--- a/style.scss
+++ b/style.scss
@@ -111,8 +111,8 @@ strong, b {
 
 img {
   max-width: 100%;
-  padding: 0.2em;
   border-radius: 0.7em;
+  padding: 0.2em;
 }
 
 .container {
@@ -133,24 +133,24 @@ img {
 
 // home page adjustments
 
-.gray {
+.filter {
   -webkit-transition: filter 0.3s ease;
      -moz-transition: filter 0.3s ease;
       -ms-transition: filter 0.3s ease;
        -o-transition: filter 0.3s ease;
           transition: filter 0.3s ease;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+  -webkit-filter: grayscale(100%) blur(5px);
+          filter: grayscale(100%) blur(5px);
 
   @include tablet {
-    -webkit-filter: grayscale(0%);
-            filter: grayscale(0%);
+    -webkit-filter: grayscale(0%) blur(0px);
+            filter: grayscale(0%) blur(0px);
   }
 }
 
-.gray:hover {
-  -webkit-filter: grayscale(0%);
-          filter: grayscale(0%);
+.filter:hover {
+  -webkit-filter: grayscale(0%) blur(0px);
+          filter: grayscale(0%) blur(0px);
 }
 
 .thumb {
@@ -172,30 +172,13 @@ img {
   width: 50%;
   float: left;
   display: block;
-  -webkit-transition: filter 0.3s ease;
-     -moz-transition: filter 0.3s ease;
-      -ms-transition: filter 0.3s ease;
-       -o-transition: filter 0.3s ease;
-          transition: filter 0.3s ease;
-  -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
-          filter: blur(5px);
-
-  @include tablet {
-    -webkit-filter: blur(0px); /* Safari 6.0 - 9.0 */
-            filter: blur(0px);
-  }
 
   @include mobile {
     width: 100%;
   }
 }
 
-.about:hover {
-  -webkit-filter: blur(0px); /* Safari 6.0 - 9.0 */
-          filter: blur(0px);
-}
-
-.about:last-child {
+.filter:last-child .about {
   -webkit-transform: scale(-1, 1);
      -moz-transform: scale(-1, 1);
        -o-transform: scale(-1, 1);
